[package]
name = "numerical-multiset"
version = "1.0.0"
authors = ["Hadrien G. <knights_of_ni@gmx.com>"]
edition = "2024"
rust-version = "1.85"
description = "An ordered multiset of machine numbers"
repository = "https://github.com/HadrienG2/numerical-multiset"
license = "MPLv2"
keywords = ["numbers", "multiset", "ordered", "sparse", "histogram"]
categories = ["algorithms", "data-structures", "mathematics", "science"]

[dependencies]
