[package]
name = "numerical-multiset"
version = "1.0.2"
authors = ["Hadrien G. <knights_of_ni@gmx.com>"]
edition = "2024"
rust-version = "1.85"
description = "An ordered multiset of machine numbers"
repository = "https://github.com/HadrienG2/numerical-multiset"
license = "MPL-2.0"
keywords = ["numbers", "multiset", "ordered", "sparse", "histogram"]
categories = ["algorithms", "data-structures", "mathematics", "science"]

[dependencies]

[dev-dependencies]
proptest = { version = "1.7.0", default-features = false, features = ["std"] }
